# citevyn

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SKILL.md  UNIVERSAL_LANDING_PAGE_PLAN.md  VALIDATION.md  code_review.md  fly.toml  skills-lock.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/answer/: __init__.py  alias_intent.py  bad.py  generate.py  memory.py  no_answer.py  orchestrator.py
backend/app/cache/: __init__.py  answer_cache.py  factory.py
backend/app/core/: config.py  cors.py  db.py  errors.py  logging.py  middleware.py  rate_limit.py  redis_client.py  security.py
backend/app/cost/: __init__.py  admission.py  budget.py  call_site.py  meter.py  metered.py  pricing.py  usage.py
backend/app/embeddings/: __init__.py  (+7 more)
backend/tests/: conftest.py  corpus_mirror.py  corpus_mirror_manifest.json  test_admin_auth.py  test_admin_routes.py  test_admin_services.py  test_alias_intent.py  test_answer_cache.py  test_answer_orchestrator.py  test_audit_service.py  test_cache_invalidation.py  test_chunk_embedding.py  test_ci_workflow_conditions.py  test_citation_validation.py  test_client_rate_key.py  test_conversation_memory.py  test_corpus_single_source.py  test_cors.py  test_cost_budget.py  test_cost_metering.py  test_cost_metering_embeddings.py  test_demo_checklist_doc.py  test_embeddings_factory.py  test_embeddings_gemini.py  test_embeddings_openrouter.py  test_errors_envelope.py  test_eval_distractors.py  test_eval_harness.py  test_eval_judge_robustness.py  test_eval_judge_subset.py  test_eval_semantic_discrimination.py  test_exact_lookup.py  test_exact_lookup_fallthrough.py  test_fly_config.py  test_frontend_assets.py  test_frontend_mount.py  test_guardrails_domain.py  test_health.py  test_health_dependencies.py  test_index_health.py  (+36 more)
(+318 files in other folders)
