[project]
name = "citevyn-backend"
version = "0.9.0"
description = "CiteVyn backend foundation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.138.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.20.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.18",
    "pyright>=1.1.390",
]

[project.scripts]
citevyn-worker = "app.worker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "postgres: tests that require a real Postgres + pgvector service (set CITEVYN_PG_TEST_URL).",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["app"]
venvPath = "."
venv = ".venv"
